[gd_scene load_steps=13 format=3 uid="uid://d1y63wu1jqybv"]

[ext_resource type="Script" path="res://Scripts/goblin_masked.gd" id="1_756jt"]
[ext_resource type="Texture2D" uid="uid://bjeghg8gb06c0" path="res://Sprites/Light.png" id="2_vgrri"]
[ext_resource type="Texture2D" uid="uid://dqtveq4llwknv" path="res://Sprites/0x72_DungeonTilesetII_v1.4.png" id="3_6i5o6"]
[ext_resource type="Script" path="res://Scripts/LifeMaskedGoblin.gd" id="4_rb5o4"]
[ext_resource type="Texture2D" uid="uid://g0l75fq6raog" path="res://Sprites/HatsTest.png" id="4_rjksu"]
[ext_resource type="Script" path="res://Scripts/AnimationPlayer.gd" id="6_clsf7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0s85l"]
radius = 5.0
height = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw5ja"]
size = Vector2(10, 15)

[sub_resource type="Animation" id="Animation_nnhpy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [183]
}

[sub_resource type="Animation" id="Animation_1dg1r"]
resource_name = "Walking"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [186, 187, 188, 189, 190]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ian5"]
_data = {
"RESET": SubResource("Animation_nnhpy"),
"Walking": SubResource("Animation_1dg1r")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_q4mxk"]
radius = 201.04

[node name="Goblin_Masked" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 275
script = ExtResource("1_756jt")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(1, 16)
scale = Vector2(0.024, 0.00400001)
texture = ExtResource("2_vgrri")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.658824)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_6i5o6")
hframes = 32
vframes = 16
frame = 183

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 12)
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_0s85l")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 268

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 12)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_lw5ja")

[node name="Hat" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -8)
scale = Vector2(2, 2)
texture = ExtResource("4_rjksu")
hframes = 15

[node name="Life" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_rb5o4")

[node name="Heart1" type="Sprite2D" parent="Life"]
position = Vector2(-9, -4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_6i5o6")
hframes = 32
vframes = 32
frame = 530

[node name="Heart2" type="Sprite2D" parent="Life"]
position = Vector2(-2, -4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_6i5o6")
hframes = 32
vframes = 32
frame = 530

[node name="Heart3" type="Sprite2D" parent="Life"]
position = Vector2(5, -4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_6i5o6")
hframes = 32
vframes = 32
frame = 530

[node name="Heart4" type="Sprite2D" parent="Life"]
position = Vector2(12, -4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_6i5o6")
hframes = 32
vframes = 32
frame = 530

[node name="Hurt" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "Walking"
libraries = {
"": SubResource("AnimationLibrary_2ian5")
}
script = ExtResource("6_clsf7")

[node name="Timer" type="Timer" parent="AnimationPlayer"]
wait_time = 8.0
one_shot = true

[node name="ActivationArea" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
shape = SubResource("CircleShape2D_q4mxk")

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(1, 200)
spread = 166.68
initial_velocity_min = 58.59
initial_velocity_max = 68.69
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0, 0.419608, 0.192157, 1)

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Invincible" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Hurt" to="." method="_on_hurt_timeout"]
[connection signal="area_entered" from="ActivationArea" to="." method="_on_activation_area_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Invincible" to="." method="_on_invincible_timeout"]
